--- a/font-arab.css
+++ b/font-arab.css
@@ -8,3 +8,5 @@
     font-weight: 400;
     font-style: normal
 }
+.tulisan-arab {font-size: 20px;line-height: 2.2;font-family: LPMQ, sans-serif;font-weight: normal;text-align: right;direction: rtl;
+}
